--- a/src/index.html
+++ b/src/index.html
@@ -51,13 +51,14 @@
       <input type="password" id="signUpPassword" class="my-2 form-control" placeholder="Password" title="Must be at least 8 characters" required>
       <input type="password" id="cpassword" class="my-2 form-control" placeholder="Confirm password" required>
       <input type="submit" class="my-2 btn btn-primary text-uppercase fw-light" value="Sign up">
+      <p>Already have an account ? <a href="#" class="loginLink text-dark text-uppercase fw-bold text-decoration-none"> Login</a></p>
     </form>
 
     <!-- new post form -->
     <form class="new-post my-3 text-center d-none">
       <h4 class="my-2 text-center text-uppercase fw-light">What's on your mind?</h4>
       <input type="text" id="subject" class="my-2 form-control" placeholder="Title" required>
-      <textarea class="form-control" id="message" cols="30" rows="10" placeholder="Write something..." required></textarea>
+      <textarea class="form-control" id="message" cols="15" rows="5" placeholder="Write something..." required></textarea>
       <input type="submit" class="my-2 btn btn-primary text-uppercase fw-light" value="Post">
     </form>
     <!-- update post form -->
